variable), then it should be removed.

* Adds support for Amazon SQS queues via `aws-sdk` instrumentation that
  partially implements the https://github.com/elastic/apm/blob/master/specs/agents/tracing-instrumentation-messaging.md[APM messaging spec],
  and adds `queue.latency.min.ms`, `queue.latency.max.ms`, and `queue.latency.avg.ms`
  metrics for SQS queues.

[float]
===== Bug fixes


[[release-notes-3.13.0]]
==== 3.13.0 - 2021/04/06

[float]
===== Features

* The APM agent's own internal logging now uses structured JSON logging using
  the https://getpino.io/#/docs/api?id=logger[pino API], and formatted in
  {ecs-logging-ref}/intro.html[ecs-logging] format. The log records on stdout
  are now single-line JSON objects. For example:
+
[source,bash]
----
# Before
APM Server transport error (ECONNREFUSED): connect ECONNREFUSED 127.0.0.1:8200

# After
{"log.level":"error","@timestamp":"2021-03-19T00:21:17.571Z","log":{"logger":"elastic-apm-node"},
"ecs":{"version":"1.6.0"},"message":"APM Server transport error (ECONNREFUSED): connect ECONNREFUSED 127.0.0.1:8200"}
----
+
Pretty formatting (and filtering) on the console may be done via the
https://github.com/trentm/go-ecslog[`ecslog`] tool.
+
A custom <<logger>> is still supported as before. However, a non-pino custom
logger will only receive the "message" field, and not structured log fields
as they are added over time.

* Add support for setting the `ELASTIC_APM_LOGGER=false` environment variable
  to disable/ignore a given custom <<logger>>. This is to support easier
  <<debug-mode>> for troubleshooting.

[float]
===== Bug fixes

* Lock package dependency "elastic-apm-http-client@9.6.0" to avoid using
  v9.7.0 for now, because it is breaking tests. A coming release will get back
  on the latest of this dependency. {issues}2032[#2032]

* Remove the "ancestors" field from a log.trace message on startup. Its info
  is a duplicate of info in the "startTrace" field in the same log record.
  {pull}2005[#2005]
