@@ -67,6 +67,17 @@ Object.defineProperty(GenericSpan.prototype, 'sampled', {
   }
 })
 
+Object.defineProperty(GenericSpan.prototype, 'sampleRate', {
+  enumerable: true,
+  get () {
+    const rate = parseFloat(this._context.tracestate.getValue('s'))
+    if (rate >= 0 && rate <= 1) {
+      return rate
+    }
+    return null
+  }
+})
+
 Object.defineProperty(GenericSpan.prototype, 'traceparent', {
   enumerable: true,
   get () {
