@@ -219,6 +219,12 @@ Span.prototype._encode = function (cb) {
       outcome: self.outcome
     }
 
+    // if a valid sample rate is set (truthy or zero), set the property
+    const sampleRate = self.sampleRate
+    if (sampleRate !== null) {
+      payload.sample_rate = sampleRate
+    }
+
     if (self._db || self._http || self._labels || self._destination || self._message) {
       payload.context = {
         db: self._db || undefined,
