@@ -161,6 +161,19 @@ Transaction.prototype.toJSON = function () {
     }
   }
 
+  // add sample_rate to transaction
+  // https://github.com/elastic/apm/blob/master/specs/agents/tracing-sampling.md
+  // Only set sample_rate on transaction payload if a valid trace state
+  // variable is set.
+  //
+  // "If there is no tracestate or no valid es entry with an s attribute,
+  //  then the agent must omit sample_rate from non-root transactions and
+  //  their spans."
+  const sampleRate = this.sampleRate
+  if (sampleRate !== null) {
+    payload.sample_rate = sampleRate
+  }
+
   return payload
 }
 
