@@ -30,7 +30,19 @@ class TraceContext {
     if (childOf && childOf._context instanceof TraceContext) return childOf._context.child()
     const traceparent = TraceParent.startOrResume(childOf, conf)
     const tracestate = TraceState.fromStringFormatString(tracestateString)
-    tracestate.setValue('s', conf.transactionSampleRate)
+
+    // if a root transaction/span, set the initial sample rate in the tracestate
+
+    if (!childOf && traceparent.recorded) {
+      // if this is a sampled/recorded transaction, set the rate
+      tracestate.setValue('s', conf.transactionSampleRate)
+    } else if (!childOf) {
+      // if this is a un-sampled/unreocrded transaction, set the
+      // rate to zero, per the spec
+      //
+      // https://github.com/elastic/apm/blob/master/specs/agents/tracing-sampling.md
+      tracestate.setValue('s', 0)
+    }
 
     return new TraceContext(traceparent, tracestate)
   }
